# CHANNEL

./: CMakeLists.txt  README.md
docs/: CHANNEL_theory_vNext.tex
examples/: constant_simple.ini
include/channel/: config.hpp  constants.hpp  device.hpp  dynamic.hpp  functional.hpp  grid.hpp  io.hpp  kernels.hpp  observables.hpp  poisson.hpp  profile.hpp  stationary.hpp  types.hpp  verify.hpp
python/: README.md  pyproject.toml
python/channelio/: __init__.py  api.py
src/: main.cpp
src/channel/: config.cpp  device.cpp  dynamic.cpp  functional.cpp  grid.cpp  io.cpp  kernels.cpp  observables.cpp  poisson.cpp  profile.cpp  stationary.cpp  verify.cpp
