[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "channelio"
version = "0.1.0"
description = "Python interface for CHANNEL (CHArge aNd ioN NanoscaLe-to-device Link)"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
packages = ["channelio"]
